# jsonrpc-python

./: README.md  pyproject.toml
jsonrpc/: __init__.py  rpc_client.py  rpc_server.py  stream_parser.py
